--- a/index.html
+++ b/index.html
@@ -30,19 +30,11 @@
     const clsx = (...xs) => xs.filter(Boolean).join(" ");
     const strToUtf8 = (s) => new TextEncoder().encode(s);
     const utf8ToStr = (u8) => new TextDecoder().decode(u8);
-    const bytesToBase64 = (bytes) => {
-      let s = ""; bytes.forEach(b => s += String.fromCharCode(b)); return btoa(s);
-    };
-    const base64ToBytes = (b64) => {
-      const bin = atob(b64); const out = new Uint8Array(bin.length);
-      for (let i=0;i<bin.length;i++) out[i] = bin.charCodeAt(i);
-      return out;
-    };
+    const bytesToBase64 = (bytes) => { let s=""; bytes.forEach(b=>s+=String.fromCharCode(b)); return btoa(s); };
+    const base64ToBytes = (b64) => { const bin=atob(b64); const out=new Uint8Array(bin.length); for(let i=0;i<bin.length;i++) out[i]=bin.charCodeAt(i); return out; };
     const base64url = (bytes) => bytesToBase64(bytes).replace(/\+/g,"-").replace(/\//g,"_").replace(/=+$/,"");
-    async function sha256Base64Url(str) {
-      const hash = await crypto.subtle.digest("SHA-256", strToUtf8(str));
-      return base64url(new Uint8Array(hash));
-    }
+    async function sha256Base64Url(str){ const h=await crypto.subtle.digest("SHA-256", strToUtf8(str)); return base64url(new Uint8Array(h)); }
+    const getQuery = (k) => new URLSearchParams(location.search).get(k);
 
     // ====== Encrypt / Decrypt (AES-GCM + PBKDF2) ======
     async function encryptJSON(obj, passphrase) {
@@ -55,8 +47,7 @@
         keyMaterial, { name:"AES-GCM", length:256 }, true, ["encrypt","decrypt"]
       );
       const ct = new Uint8Array(await crypto.subtle.encrypt({ name:"AES-GCM", iv }, key, data));
-      return { v:1, algo:"AES-GCM", kdf:"PBKDF2-SHA256", iter:150000,
-               salt: bytesToBase64(salt), iv: bytesToBase64(iv), ct: bytesToBase64(ct) };
+      return { v:1, algo:"AES-GCM", kdf:"PBKDF2-SHA256", iter:150000, salt: bytesToBase64(salt), iv: bytesToBase64(iv), ct: bytesToBase64(ct) };
     }
     async function decryptJSON(pkg, passphrase) {
       const salt = base64ToBytes(pkg.salt);
@@ -108,14 +99,8 @@
             <form onSubmit={unlock} className="w-full max-w-sm bg-white rounded-2xl shadow p-6 space-y-4">
               <h1 className="text-xl font-semibold">Unlock Pool Tracker</h1>
               <p className="text-sm text-gray-600">Enter your unique phrase. Use the same phrase on any device.</p>
-              <input
-                type="password"
-                className="w-full px-3 py-2 rounded-xl border bg-white shadow-sm focus:outline-none"
-                placeholder="Your phrase"
-                value={phrase}
-                onChange={(e)=>setPhrase(e.target.value)}
-                required
-              />
+              <input type="password" className="w-full px-3 py-2 rounded-xl border bg-white shadow-sm focus:outline-none"
+                     placeholder="Your phrase" value={phrase} onChange={(e)=>setPhrase(e.target.value)} required />
               <button className="w-full px-4 py-2 rounded-2xl bg-black text-white shadow">Unlock</button>
             </form>
           </div>
@@ -134,6 +119,16 @@
       useEffect(()=>localStorage.setItem(PREF_GAS_URL, gasUrl), [gasUrl]);
       useEffect(()=>localStorage.setItem(PREF_AUTO_LOAD, JSON.stringify(autoLoad)), [autoLoad]);
       useEffect(()=>localStorage.setItem(PREF_AUTO_SAVE, JSON.stringify(autoSave)), [autoSave]);
+
+      // Allow first-time setup via URL param: ?gas=<encoded Apps Script URL>
+      useEffect(()=>{
+        const q = getQuery("gas");
+        if (q) {
+          const decoded = decodeURIComponent(q);
+          setGasUrl(decoded);
+          localStorage.setItem(PREF_GAS_URL, decoded);
+        }
+      }, []);
 
       // Compute vault hash for Drive key
       const [vaultHash, setVaultHash] = useState("(hashing…)");
@@ -158,12 +153,15 @@
                 opponents: (dec.opponents||[]).map(o => ({...o, photo:o.photo??null})) || [],
                 maxGames: dec.maxGames ?? MAX_GAMES_DEFAULT,
                 meName: dec.meName ?? "Me",
+                // If the Drive URL is stored in the vault, adopt it (useful after first cloud save)
+                _vaultGasUrl: dec.gasUrl || ""
               });
             } else {
               setInitState({
                 opponents: [{ id: crypto.randomUUID(), name:"Alice", games:Array(MAX_GAMES_DEFAULT).fill(null), photo:null }],
                 maxGames: MAX_GAMES_DEFAULT,
                 meName: "Me",
+                _vaultGasUrl: ""
               });
             }
           } catch {
@@ -179,6 +177,11 @@
       if (!ready || !initState) {
         return <div className="min-h-screen flex items-center justify-center text-gray-500">Loading…</div>;
       }
+
+      // If local pref is empty but vault contained a gasUrl, adopt it
+      useEffect(()=>{
+        if (!gasUrl && initState._vaultGasUrl) setGasUrl(initState._vaultGasUrl);
+      }, [initState._vaultGasUrl]);
 
       return (
         <InnerApp
@@ -203,14 +206,14 @@
       const [meName, setMeName] = useState(initial.meName);
       const [view, setView] = useState("tracker"); // tracker | league | settings
 
-      // Persist encrypted locally on any change
+      // Persist encrypted locally on any change (including gasUrl)
       useEffect(()=>{
         (async ()=>{
-          const payload = { opponents, maxGames, meName, ts: Date.now() };
+          const payload = { opponents, maxGames, meName, gasUrl, ts: Date.now() };
           const enc = await encryptJSON(payload, passphrase);
           localStorage.setItem(vaultKey, JSON.stringify(enc));
         })();
-      }, [opponents, maxGames, meName, passphrase, vaultKey]);
+      }, [opponents, maxGames, meName, gasUrl, passphrase, vaultKey]);
 
       // ---- Auto-load from Drive after unlock ----
       useEffect(()=>{
@@ -220,12 +223,12 @@
             const enc = await driveLoad(gasUrl, vaultHash);
             if (!enc) return; // nothing stored yet
             const data = await decryptJSON(enc, passphrase);
+            // If the Drive payload contains a gasUrl, adopt it (keeps it in sync across devices)
+            if (data.gasUrl && data.gasUrl !== gasUrl) setGasUrl(data.gasUrl);
             setOpponents((data.opponents||[]).map(o=>({...o, photo:o.photo??null})));
             setMaxGames(data.maxGames ?? MAX_GAMES_DEFAULT);
             setMeName(data.meName ?? "Me");
-          } catch (e) {
-            console.warn("Auto-load failed:", e);
-          }
+          } catch (e) { console.warn("Auto-load failed:", e); }
         })();
         // run once on mount
         // eslint-disable-next-line react-hooks/exhaustive-deps
@@ -235,20 +238,17 @@
       useEffect(()=>{
         (async ()=>{
           if (!autoSave || !gasUrl) return;
-          const payload = { opponents, maxGames, meName, ts: Date.now() };
+          const payload = { opponents, maxGames, meName, gasUrl, ts: Date.now() };
           const enc = await encryptJSON(payload, passphrase);
-          try {
-            await driveSave(gasUrl, vaultHash, JSON.stringify(enc));
-          } catch (e) {
-            console.warn("Auto-save failed:", e);
-          }
+          try { await driveSave(gasUrl, vaultHash, JSON.stringify(enc)); }
+          catch (e) { console.warn("Auto-save failed:", e); }
         })();
-      }, [opponents, maxGames, meName, autoSave, gasUrl, passphrase, vaultHash]);
+      }, [opponents, maxGames, meName, gasUrl, autoSave, passphrase, vaultHash]);
 
       // Manual cloud actions
       async function saveToDrive() {
         if (!gasUrl) { alert("Enter your Apps Script Web App URL in Settings."); return; }
-        const payload = { opponents, maxGames, meName, ts: Date.now() };
+        const payload = { opponents, maxGames, meName, gasUrl, ts: Date.now() };
         const enc = await encryptJSON(payload, passphrase);
         await driveSave(gasUrl, vaultHash, JSON.stringify(enc));
         alert("Saved to Drive.");
@@ -258,6 +258,7 @@
         const enc = await driveLoad(gasUrl, vaultHash);
         if (!enc) { alert("No data found for this phrase yet."); return; }
         const data = await decryptJSON(enc, passphrase);
+        if (data.gasUrl && data.gasUrl !== gasUrl) setGasUrl(data.gasUrl);
         setOpponents((data.opponents||[]).map(o=>({...o, photo:o.photo??null})));
         setMaxGames(data.maxGames ?? MAX_GAMES_DEFAULT);
         setMeName(data.meName ?? "Me");
@@ -268,33 +269,19 @@
       const addOpponent = () => setOpponents(p => [...p, { id: crypto.randomUUID(), name:"New Opponent", games:Array(maxGames).fill(null), photo:null }]);
       const removeOpponent = (id) => setOpponents(p => p.filter(o => o.id !== id));
       const renameOpponent = (id, name) => setOpponents(p => p.map(o => o.id===id ? {...o, name} : o));
-      const setResult = (id, i, val) => setOpponents(p => p.map(o => {
-        if (o.id !== id) return o; const g = [...o.games]; g[i] = val; return {...o, games:g};
-      }));
+      const setResult = (id, i, val) => setOpponents(p => p.map(o => { if (o.id !== id) return o; const g=[...o.games]; g[i]=val; return {...o, games:g}; }));
       const cycleResult = (cur) => cur===null ? "W" : cur==="W" ? "L" : null;
       const clearResults = (id) => setOpponents(p => p.map(o => o.id===id ? {...o, games:Array(maxGames).fill(null)} : o));
       const quickFill = (id, v) => setOpponents(p => p.map(o => o.id===id ? {...o, games:o.games.map(()=>v)} : o));
 
       // Photos
-      const setPhotoURL = (id) => {
-        const url = prompt("Paste public image URL:");
-        if (!url) return;
-        setOpponents(p => p.map(o => o.id===id ? {...o, photo:{type:"url", src:url}} : o));
-      };
-      const uploadPhotoFile = (id, file) => {
-        if (!file) return;
-        const rd = new FileReader();
-        rd.onload = () => setOpponents(p => p.map(o => o.id===id ? {...o, photo:{type:"data", src:rd.result}} : o));
-        rd.readAsDataURL(file);
-      };
+      const setPhotoURL = (id) => { const url = prompt("Paste public image URL:"); if (!url) return; setOpponents(p => p.map(o => o.id===id ? {...o, photo:{type:"url", src:url}} : o)); };
+      const uploadPhotoFile = (id, file) => { if (!file) return; const rd=new FileReader(); rd.onload=()=>setOpponents(p=>p.map(o=>o.id===id?{...o,photo:{type:"data",src:rd.result}}:o)); rd.readAsDataURL(file); };
       const clearPhoto = (id) => setOpponents(p => p.map(o => o.id===id ? {...o, photo:null} : o));
 
       // Stats
       const overall = useMemo(()=>{
-        const t = opponents.reduce((a,o)=>({
-          wins: a.wins + o.games.filter(x=>x==="W").length,
-          losses: a.losses + o.games.filter(x=>x==="L").length
-        }), {wins:0,losses:0});
+        const t = opponents.reduce((a,o)=>({ wins:a.wins+o.games.filter(x=>x==="W").length, losses:a.losses+o.games.filter(x=>x==="L").length }), {wins:0,losses:0});
         const played = t.wins + t.losses;
         return { ...t, played, pct: played ? (t.wins/played)*100 : 0 };
       }, [opponents]);
@@ -312,9 +299,7 @@
       }, [opponents]);
 
       const Tab = ({ id, children }) => (
-        <button onClick={()=>setView(id)}
-          className={clsx("px-3 py-2 rounded-2xl border shadow-sm text-sm",
-                          view===id ? "bg-black text-white" : "bg-white")}>
+        <button onClick={()=>setView(id)} className={clsx("px-3 py-2 rounded-2xl border shadow-sm text-sm", view===id ? "bg-black text-white" : "bg-white")}>
           {children}
         </button>
       );
@@ -341,8 +326,7 @@
                   <div className="grid grid-cols-1 sm:grid-cols-4 gap-4">
                     <div className="p-4 rounded-2xl bg-white shadow">
                       <div className="text-xs text-gray-500">Your Name</div>
-                      <input value={meName} onChange={e=>setMeName(e.target.value)}
-                             className="mt-1 w-full px-3 py-2 rounded-xl border bg-white shadow-sm focus:outline-none" />
+                      <input value={meName} onChange={e=>setMeName(e.target.value)} className="mt-1 w-full px-3 py-2 rounded-xl border bg-white shadow-sm focus:outline-none" />
                     </div>
                     <div className="p-4 rounded-2xl bg-white shadow">
                       <div className="text-xs text-gray-500">Games per Opponent</div>
@@ -384,16 +368,10 @@
                                 <span className="text-sm text-gray-500">{(o.name||"Opp")[0]}</span>
                               )}
                             </div>
-                            <input
-                              value={o.name}
-                              onChange={(e)=>renameOpponent(o.id, e.target.value)}
-                              className="px-3 py-2 rounded-xl border bg-white shadow-sm focus:outline-none font-medium"
-                            />
+                            <input value={o.name} onChange={(e)=>renameOpponent(o.id, e.target.value)} className="px-3 py-2 rounded-xl border bg-white shadow-sm focus:outline-none font-medium" />
                           </div>
                           <div className="flex flex-wrap items-center gap-2">
-                            <span className="text-sm text-gray-600">
-                              {meName} vs <span className="font-medium">{o.name || "Opponent"}</span> — {wins}-{losses} • {pct}%
-                            </span>
+                            <span className="text-sm text-gray-600">{/* summary */}{meName} vs <span className="font-medium">{o.name || "Opponent"}</span> — {wins}-{losses} • {pct}%</span>
                             <div className="flex gap-2">
                               <button onClick={()=>quickFill(o.id,"W")} className="px-3 py-1 rounded-xl border shadow-sm">Fill W</button>
                               <button onClick={()=>quickFill(o.id,"L")} className="px-3 py-1 rounded-xl border shadow-sm">Fill L</button>
@@ -413,16 +391,11 @@
 
                         <div className="mt-4 flex flex-wrap gap-2">
                           {o.games.map((val, i) => (
-                            <button
-                              key={i}
-                              onClick={()=>setResult(o.id, i, (val===null ? "W" : val==="W" ? "L" : null))}
-                              className={clsx(
-                                "w-10 h-10 rounded-xl border shadow-sm text-sm font-semibold",
-                                val==="W" && "bg-green-100 border-green-300",
-                                val==="L" && "bg-red-100 border-red-300"
-                              )}
-                              title={`Game ${i+1}: ${val ?? "blank"}`}
-                            >
+                            <button key={i} onClick={()=>setResult(o.id, i, (val===null ? "W" : val==="W" ? "L" : null))}
+                              className={clsx("w-10 h-10 rounded-xl border shadow-sm text-sm font-semibold",
+                                              val==="W" && "bg-green-100 border-green-300",
+                                              val==="L" && "bg-red-100 border-red-300")}
+                              title={`Game ${i+1}: ${val ?? "blank"}`}>
                               {val ?? i+1}
                             </button>
                           ))}
@@ -480,13 +453,9 @@
               <section className="bg-white rounded-2xl shadow p-4 space-y-6">
                 <div>
                   <h2 className="text-lg font-semibold mb-2">Google Drive (Apps Script) Sync</h2>
-                  <p className="text-sm text-gray-600 mb-2">Paste your Web App URL from Apps Script. Auto-load on unlock is ON by default.</p>
-                  <input
-                    placeholder="Apps Script Web App URL"
-                    className="w-full px-3 py-2 rounded-xl border bg-white shadow-sm"
-                    value={gasUrl}
-                    onChange={(e)=>setGasUrl(e.target.value)}
-                  />
+                  <p className="text-sm text-gray-600 mb-2">Paste your Web App URL from Apps Script once per device, or open your page using <code>?gas=</code> in the URL. It’s also saved into your encrypted vault so future loads can adopt it.</p>
+                  <input placeholder="Apps Script Web App URL" className="w-full px-3 py-2 rounded-xl border bg-white shadow-sm"
+                         value={gasUrl} onChange={(e)=>setGasUrl(e.target.value)} />
                   <div className="mt-3 flex flex-wrap gap-4 items-center">
                     <label className="inline-flex items-center gap-2 text-sm">
                       <input type="checkbox" checked={autoLoad} onChange={e=>setAutoLoad(e.target.checked)} />
@@ -499,21 +468,23 @@
                     <button onClick={loadFromDrive} className="px-4 py-2 rounded-2xl border shadow-sm">Load now</button>
                     <button onClick={saveToDrive} className="px-4 py-2 rounded-2xl bg-black text-white shadow">Save now</button>
                   </div>
+                  <p className="text-xs text-gray-500 mt-2">
+                    Quick link trick: <code>?gas=</code> param. Example:
+                    <br/> <span className="font-mono">...?gas=https%3A%2F%2Fscript.google.com%2Fmacros%2Fs%2FYOUR_ID%2Fexec</span>
+                  </p>
                 </div>
 
                 <div>
                   <h2 className="text-lg font-semibold mb-2">Export / Import (manual backup)</h2>
                   <div className="flex flex-wrap gap-2">
-                    <button
-                      className="px-4 py-2 rounded-2xl border shadow-sm"
+                    <button className="px-4 py-2 rounded-2xl border shadow-sm"
                       onClick={()=>{
-                        const data = { opponents, maxGames, meName };
+                        const data = { opponents, maxGames, meName, gasUrl };
                         const blob = new Blob([JSON.stringify(data,null,2)], {type:"application/json"});
                         const url = URL.createObjectURL(blob);
                         const a = document.createElement("a"); a.href=url; a.download="pool-tracker-data.json"; a.click();
                         setTimeout(()=>URL.revokeObjectURL(url), 1000);
-                      }}
-                    >Download JSON</button>
+                      }}>Download JSON</button>
                     <label className="px-4 py-2 rounded-2xl border shadow-sm cursor-pointer">
                       Import JSON
                       <input type="file" accept="application/json" className="hidden" onChange={(e)=>{
@@ -523,6 +494,7 @@
                           try {
                             const d = JSON.parse(rd.result);
                             if (!Array.isArray(d.opponents)) throw new Error("Invalid file");
+                            if (d.gasUrl) setGasUrl(d.gasUrl);
                             setOpponents(d.opponents.map(o=>({...o, photo:o.photo??null})));
                             setMaxGames(d.maxGames||MAX_GAMES_DEFAULT);
                             setMeName(d.meName||"Me");
@@ -537,7 +509,7 @@
             )}
 
             <footer className="mt-10 text-xs text-gray-500 text-center">
-              <p>Tip: Use the same phrase on any device. Set your Apps Script Web App URL in Settings for auto-load.</p>
+              <p>Use the same phrase on any device. For first-time setup on a device, either paste the Apps Script URL in Settings or open the site with <code>?gas=</code>.</p>
             </footer>
           </div>
         </div>
