--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     // ========== CONFIG: set your Apps Script URL here ==========
     // IMPORTANT: paste your exact Web App URL (ends with /exec) between the quotes.
-    const GAS_WEB_APP_URL = "REPLACE_WITH_YOUR_APPS_SCRIPT_WEB_APP_URL";
+    const GAS_WEB_APP_URL = "https://script.google.com/macros/s/AKfycbwjXmK1SkLKN5Wp54-h8-_2GCB4oTP92p4oKGNlkDyc8MdAgKzn1_HDSk16KYYgmgpW/exec";
 
     // ========= Utilities =========
     const MAX_GAMES_DEFAULT = 20;
